Update debian/control headers Homepage, Origin, Bugs

--- a/debian/control
+++ b/debian/control
@@ -5,8 +5,11 @@ Maintainer: Ulrich Dangel <mru@grml.org>
 Build-Depends: debhelper (>= 7)
 Build-Depends-Indep: asciidoc, xsltproc, docbook-xsl
 Standards-Version: 3.9.2
+Homepage: http://grml.org/
 Vcs-git: git://git.grml.org/grml-core.git
 Vcs-Browser: http://git.grml.org/?p=grml-core.git
+Origin: Grml
+Bugs: mailto:bugs@grml.org
 
 Package: grml-core
 Architecture: all
